parse-display/tests/compile_fail/display/struct_no_display_field.stderr
error[E0277]: `NoDisplay` doesn't implement `std::fmt::Display`
 --> tests/compile_fail/display/struct_no_display_field.rs:3:10
  |
3 | #[derive(Display)]
  |          ^^^^^^^ `NoDisplay` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `NoDisplay`, which is required by `&NoDisplay: std::fmt::Display`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the derive macro `Display` (in Nightly builds, run with -Z macro-backtrace for more info)
